@@ -10,7 +10,9 @@ import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
+import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import com.powsybl.commons.reporter.Reporter;
 import com.powsybl.loadflow.LoadFlowResult;
@@ -65,49 +67,86 @@ public class SecurityAnalysisProviderMock implements SecurityAnalysisProvider {
         new ContingencyInfos(new Contingency("la", new ThreeWindingsTransformerContingency("l0"))), // Contingencies are reordered by id
         new ContingencyInfos(new Contingency("lb", new StaticVarCompensatorContingency("la")))
     );
-    static final List<ContingencyInfos> CONTINGENCIES_VARIANT = List.of(
-        new ContingencyInfos(new Contingency("l3", new BusbarSectionContingency("l3"))),
-        new ContingencyInfos(new Contingency("l4", new LineContingency("l4")))
+
+    static final List<Contingency> FAILED_CONTINGENCIES = List.of(
+        new Contingency("f1", new TwoWindingsTransformerContingency("t1")),
+        new Contingency("f2", new ThreeWindingsTransformerContingency("t2")), // Contingencies are reordered by id
+        new Contingency("f3", new StaticVarCompensatorContingency("s3"))
     );
 
-    static final LimitViolation LIMIT_VIOLATION_1 = new LimitViolation("l3", LimitViolationType.CURRENT, "", 20 * 60, 10, 1, 11, Branch.Side.ONE);
-    static final LimitViolation LIMIT_VIOLATION_2 = new LimitViolation("vl1", LimitViolationType.HIGH_VOLTAGE, "", 0, 400, 1, 410, null);
-    static final LimitViolation LIMIT_VIOLATION_3 = new LimitViolation("l6", LimitViolationType.CURRENT, "", 20 * 60, 10, 1, 11, Branch.Side.ONE);
-    static final LimitViolation LIMIT_VIOLATION_4 = new LimitViolation("vl7", LimitViolationType.HIGH_VOLTAGE, "", 0, 400, 1, 410, null);
+    static final List<Contingency> CONTINGENCIES_VARIANT = List.of(
+        new Contingency("l3", new BusbarSectionContingency("l3")),
+        new Contingency("l4", new LineContingency("l4"))
+    );
 
-    static final SecurityAnalysisResult RESULT = new SecurityAnalysisResult(new LimitViolationsResult(List.of(LIMIT_VIOLATION_1)), LoadFlowResult.ComponentResult.Status.CONVERGED,
-            CONTINGENCIES.stream().map(contingency -> new PostContingencyResult(contingency.getContingency(), PostContingencyComputationStatus.CONVERGED, List.of(LIMIT_VIOLATION_2)))
-            .collect(Collectors.toList()));
+    static final LimitViolation LIMIT_VIOLATION_1 = new LimitViolation("l3", LimitViolationType.CURRENT, "l3_name", 20 * 60, 10, 1, 11, Branch.Side.ONE);
+    static final LimitViolation LIMIT_VIOLATION_2 = new LimitViolation("vl1", LimitViolationType.HIGH_VOLTAGE, "vl1_name", 0, 400, 1, 410, null);
+    static final LimitViolation LIMIT_VIOLATION_3 = new LimitViolation("l6", LimitViolationType.CURRENT, "l6_name", 20 * 60, 10, 1, 11, Branch.Side.ONE);
+    static final LimitViolation LIMIT_VIOLATION_4 = new LimitViolation("vl7", LimitViolationType.HIGH_VOLTAGE, "vl7_name", 0, 400, 2, 410, null);
+    static final LimitViolation LIMIT_VIOLATION_5 = new LimitViolation("vl5", LimitViolationType.LOW_VOLTAGE, "vl5_name", 0, 350, 3, 416, Branch.Side.TWO);
+    static final List<LimitViolation> RESULT_LIMIT_VIOLATIONS = List.of(LIMIT_VIOLATION_1, LIMIT_VIOLATION_2);
+    static final List<LimitViolation> FAILED_LIMIT_VIOLATIONS = List.of(LIMIT_VIOLATION_3, LIMIT_VIOLATION_4);
+    static final SecurityAnalysisResult RESULT = new SecurityAnalysisResult(new LimitViolationsResult(List.of(LIMIT_VIOLATION_1, LIMIT_VIOLATION_2, LIMIT_VIOLATION_3)), LoadFlowResult.ComponentResult.Status.CONVERGED,
+            Stream.concat(
+                            CONTINGENCIES.stream().map(contingency -> new PostContingencyResult(contingency.getContingency(), PostContingencyComputationStatus.CONVERGED, RESULT_LIMIT_VIOLATIONS)),
+                            FAILED_CONTINGENCIES.stream().map(contingency -> new PostContingencyResult(contingency, PostContingencyComputationStatus.FAILED, FAILED_LIMIT_VIOLATIONS)))
+                    .toList());
+    static final List<LimitViolation> RESULT_PRECONTINGENCY_LIMIT_VIOLATIONS = List.of(LIMIT_VIOLATION_1, LIMIT_VIOLATION_2, LIMIT_VIOLATION_5);
+    static final SecurityAnalysisResult PRECONTINGENCY_RESULT = new SecurityAnalysisResult(new LimitViolationsResult(List.of(LIMIT_VIOLATION_1, LIMIT_VIOLATION_2, LIMIT_VIOLATION_5)), LoadFlowResult.ComponentResult.Status.CONVERGED,
+            Stream.concat(
+                            CONTINGENCIES.stream().map(contingency -> new PostContingencyResult(contingency.getContingency(), PostContingencyComputationStatus.CONVERGED, RESULT_LIMIT_VIOLATIONS)),
+                            FAILED_CONTINGENCIES.stream().map(contingency -> new PostContingencyResult(contingency, PostContingencyComputationStatus.FAILED, FAILED_LIMIT_VIOLATIONS)))
+                    .toList());
 
     static final SecurityAnalysisResult RESULT_VARIANT = new SecurityAnalysisResult(new LimitViolationsResult(List.of(LIMIT_VIOLATION_3)), LoadFlowResult.ComponentResult.Status.CONVERGED,
-        CONTINGENCIES_VARIANT.stream().map(contingency -> new PostContingencyResult(contingency.getContingency(), PostContingencyComputationStatus.CONVERGED, List.of(LIMIT_VIOLATION_4)))
-            .collect(Collectors.toList()));
+        CONTINGENCIES_VARIANT.stream().map(contingency -> new PostContingencyResult(contingency, PostContingencyComputationStatus.CONVERGED, List.of(LIMIT_VIOLATION_4)))
+            .toList());
 
-    static final List<ContingencyResultDTO> RESULT_CONTINGENCIES = CONTINGENCIES.stream().map(ContingencyInfos::getContingency).map(c ->
-        new ContingencyResultDTO(
-            new ContingencyDTO(
-                c.getId(),
-                LoadFlowResult.ComponentResult.Status.CONVERGED.name(),
-                c.getElements().stream().map(e -> new ContingencyElementDTO(e.getId(), e.getType())).collect(Collectors.toList())
-            ),
-            List.of(new SubjectLimitViolationDTO(
-                LIMIT_VIOLATION_2.getSubjectId(),
-                toLimitViolationDTO(LIMIT_VIOLATION_2)
-            )
-        ))).collect(Collectors.toList()
-    );
+    static final List<ContingencyResultDTO> RESULT_CONTINGENCIES = Stream.concat(
+        CONTINGENCIES.stream().map(c -> toContingencyResultDTO(c.getContingency(), LoadFlowResult.ComponentResult.Status.CONVERGED.name(), RESULT_LIMIT_VIOLATIONS)),
+        FAILED_CONTINGENCIES.stream().map(c -> toContingencyResultDTO(c, LoadFlowResult.ComponentResult.Status.FAILED.name(), FAILED_LIMIT_VIOLATIONS))
+    ).toList();
 
-    static final List<SubjectLimitViolationResultDTO> RESULT_CONSTRAINTS = List.of(
-        new SubjectLimitViolationResultDTO(LIMIT_VIOLATION_1.getSubjectId(), List.of()),
-        new SubjectLimitViolationResultDTO(
-            LIMIT_VIOLATION_2.getSubjectId(),
-            CONTINGENCIES.stream().map(ContingencyInfos::getContingency).map(c -> new ContingencyLimitViolationDTO(
-                    new ContingencyDTO(c.getId(), LoadFlowResult.ComponentResult.Status.CONVERGED.name(), c.getElements().stream().map(e -> new ContingencyElementDTO(e.getId(), e.getType())).collect(Collectors.toList())),
-                    toLimitViolationDTO(LIMIT_VIOLATION_2)
-                )
-            ).collect(Collectors.toList())
-        ));
+    static List<ContingencyResultDTO> getResultContingenciesWithNestedFilter(Function<SubjectLimitViolationDTO, Boolean> filterMethod) {
+        return RESULT_CONTINGENCIES.stream().map(r ->
+            new ContingencyResultDTO(
+                r.getContingency(),
+                r.getSubjectLimitViolations().stream()
+                    .filter(filterMethod::apply)
+                    .toList()
+            ))
+            .filter(r -> !r.getSubjectLimitViolations().isEmpty())
+            .toList();
+    }
 
+    static final List<SubjectLimitViolationResultDTO> RESULT_CONSTRAINTS = Stream.concat(
+        RESULT_LIMIT_VIOLATIONS.stream()
+            .map(limitViolation -> toSubjectLimitViolationResultDTO(limitViolation, CONTINGENCIES.stream().map(ContingencyInfos::getContingency).collect(Collectors.toList()), LoadFlowResult.ComponentResult.Status.CONVERGED)),
+        FAILED_LIMIT_VIOLATIONS.stream()
+            .map(limitViolation -> toSubjectLimitViolationResultDTO(limitViolation, FAILED_CONTINGENCIES, LoadFlowResult.ComponentResult.Status.FAILED))
+    ).toList();
+
+    static List<SubjectLimitViolationResultDTO> getResultConstraintsWithNestedFilter(Function<ContingencyLimitViolationDTO, Boolean> filterMethod) {
+        return RESULT_CONSTRAINTS.stream().map(r ->
+            new SubjectLimitViolationResultDTO(
+                r.getSubjectId(),
+                r.getContingencies().stream()
+                    .filter(filterMethod::apply)
+                    .toList()
+            ))
+            .filter(r -> !r.getContingencies().isEmpty())
+            .toList();
+    }
+
+    static List<PreContingencyLimitViolationResultDTO> getResultPreContingencyWithNestedFilter(Function<PreContingencyLimitViolationResultDTO, Boolean> filterMethod) {
+        return RESULT_PRECONTINGENCY.stream().
+                filter(filterMethod::apply)
+                .toList();
+    }
+
+    static final List<PreContingencyLimitViolationResultDTO> RESULT_PRECONTINGENCY =
+            RESULT_PRECONTINGENCY_LIMIT_VIOLATIONS.stream()
+                    .map(limitViolation -> toPreContingencyResultDTO(limitViolation, LoadFlowResult.ComponentResult.Status.CONVERGED)).toList();
     static final SecurityAnalysisReport REPORT = new SecurityAnalysisReport(RESULT);
     static final SecurityAnalysisReport REPORT_VARIANT = new SecurityAnalysisReport(RESULT_VARIANT);
 
@@ -154,19 +193,85 @@ public class SecurityAnalysisProviderMock implements SecurityAnalysisProvider {
         return "1";
     }
 
-    private static LimitViolationDTO toLimitViolationDTO(LimitViolation limitViolation) {
+    private static SubjectLimitViolationDTO toSubjectLimitViolationDTO(LimitViolation limitViolation) {
         Double computedLoading = limitViolation.getLimitType().equals(LimitViolationType.CURRENT)
             ? (100 * limitViolation.getValue()) / (limitViolation.getLimit() * limitViolation.getLimitReduction())
             : null;
-        return new LimitViolationDTO(
-            limitViolation.getLimitType(),
-            limitViolation.getLimitName(),
-            limitViolation.getSide(),
-            limitViolation.getAcceptableDuration(),
-            limitViolation.getLimit(),
-            limitViolation.getLimitReduction(),
-            limitViolation.getValue(),
-            computedLoading
+
+        return new SubjectLimitViolationDTO(
+            limitViolation.getSubjectId(),
+            new LimitViolationDTO(
+                limitViolation.getLimitType(),
+                limitViolation.getLimitName(),
+                limitViolation.getSide(),
+                limitViolation.getAcceptableDuration(),
+                limitViolation.getLimit(),
+                limitViolation.getLimitReduction(),
+                limitViolation.getValue(),
+                computedLoading
+            )
+        );
+    }
+
+    private static SubjectLimitViolationResultDTO toSubjectLimitViolationResultDTO(LimitViolation limitViolation, List<Contingency> convergedContingencies, LoadFlowResult.ComponentResult.Status status) {
+        return new SubjectLimitViolationResultDTO(
+            limitViolation.getSubjectId(),
+            convergedContingencies.stream().map(c -> toContingencyLimitViolationDTO(c, limitViolation, status.name())).toList());
+    }
+
+    private static PreContingencyLimitViolationResultDTO toPreContingencyResultDTO(LimitViolation limitViolation, LoadFlowResult.ComponentResult.Status status) {
+        Double computedLoading = limitViolation.getLimitType().equals(LimitViolationType.CURRENT)
+                ? (100 * limitViolation.getValue()) / (limitViolation.getLimit() * limitViolation.getLimitReduction())
+                : null;
+        return new PreContingencyLimitViolationResultDTO(
+                limitViolation.getSubjectId(),
+                status.name(),
+                new LimitViolationDTO(
+                        limitViolation.getLimitType(),
+                        limitViolation.getLimitName(),
+                        limitViolation.getSide(),
+                        limitViolation.getAcceptableDuration(),
+                        limitViolation.getLimit(),
+                        limitViolation.getLimitReduction(),
+                        limitViolation.getValue(),
+                        computedLoading
+                ));
+    }
+
+    private static ContingencyResultDTO toContingencyResultDTO(Contingency contingency, String status, List<LimitViolation> limitViolations) {
+        return new ContingencyResultDTO(
+            new ContingencyDTO(
+                contingency.getId(),
+                status,
+                contingency.getElements().stream().map(e -> new ContingencyElementDTO(e.getId(), e.getType())).toList()
+            ),
+            limitViolations.stream()
+                .map(SecurityAnalysisProviderMock::toSubjectLimitViolationDTO)
+                .toList()
+        );
+    }
+
+    private static ContingencyLimitViolationDTO toContingencyLimitViolationDTO(Contingency contingency, LimitViolation limitViolation, String status) {
+        Double computedLoading = limitViolation.getLimitType().equals(LimitViolationType.CURRENT)
+            ? (100 * limitViolation.getValue()) / (limitViolation.getLimit() * limitViolation.getLimitReduction())
+            : null;
+
+        return new ContingencyLimitViolationDTO(
+            new ContingencyDTO(
+                contingency.getId(),
+                status,
+                contingency.getElements().stream().map(e -> new ContingencyElementDTO(e.getId(), e.getType())).toList()
+            ),
+            new LimitViolationDTO(
+                limitViolation.getLimitType(),
+                limitViolation.getLimitName(),
+                limitViolation.getSide(),
+                limitViolation.getAcceptableDuration(),
+                limitViolation.getLimit(),
+                limitViolation.getLimitReduction(),
+                limitViolation.getValue(),
+                computedLoading
+            )
         );
     }
 }
